# Pixel-Pet

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pet.html  pnpm-lock.yaml  progress.md  vite.config.ts  vitest.config.ts
.claude/: settings.json
src/: App.tsx  pet-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/activity/: macos.rs  mod.rs  poller.rs
src-tauri/src/config/: mod.rs
src-tauri/src/ipc/: editor.rs  mod.rs  pet.rs  settings.rs  system.rs  tests.rs
src-tauri/src/persistence/: drawings.rs  migrations.rs  mod.rs  settings.rs
src-tauri/src/state/: machine.rs  mod.rs  states.rs
src/components/editor/: EditorRoot.tsx  PalettePicker.tsx  PixelCanvas.tsx  ToolPanel.tsx  constants.ts  palette.ts  useDrawingState.ts
src/components/editor/__tests__/: useDrawingState.test.ts
src/components/pet/: PetCloseButton.tsx  PetDevPanel.tsx  PetRenderer.tsx  PetSprite.tsx  StateOverlay.tsx  SystemBody.tsx
src/hooks/: useDrawing.ts  usePetState.ts
src/styles/: editor.css  pet-states.css  tokens.css
