[package]
name = "pixel-pet"
version = "0.1.0"
description = "A macOS desktop pixel pet companion."
authors = ["Kai Cheng"]
edition = "2021"

[lib]
# `_lib` suffix avoids a Windows linker collision with the bin name.
# See https://github.com/rust-lang/cargo/issues/8519
name = "pixel_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling — libraries use thiserror per rules/rust/coding-style.md
thiserror = "1"

# Structured logging — never println!/dbg! in production paths
tracing = "0.1"

# Async runtime (tauri pulls tokio transitively; we name features for our own use)
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

# Wall-clock for meal triggers
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# NOTE: tauri-specta / specta dependencies are intentionally deferred to agent
# A5 (see docs/agent-team-plan.md §4.5). Phase 0 keeps the dep tree minimal so
# `cargo check` is fast; A5 will pin compatible versions when wiring the
# typed IPC client.

[target.'cfg(target_os = "macos")'.dependencies]
# CGEventSource.secondsSinceLastEventType — see architecture.md §5.1.
# Used by agent A3 in activity/macos.rs.
core-graphics = "0.23"

[dev-dependencies]
tempfile = "3"
rstest = "0.21"
mockall = "0.13"

